# ai-radiology-qwen

./: .env.docker  .env.minikube  .pre-commit-config.yaml  Dockerfile  README copy.md  README.md  _typos.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-docker-build-push.yaml  manual-warm-cache.yaml  train.yaml
configs/: debug_full.yaml  debug_lora.yaml  debug_qlora.yaml  debug_qlora_flash.yaml  demo.yaml
src/: __init__.py
src/serving/: __init__.py  schemas.py  serve.py
src/training/: __init__.py  callbacks.py  config.py  data.py  dvc_loader.py  log.py  mlflow_wrapper.py  train copy.py  train.py  trainer.py
